

[metadata]
name = dca-investing
version = 0.1.0
author = Georgi Ivanov
author_email = georgi.ivanovtn@gmail.com
description = A tool that takes market data and calculates returns on DCA strategy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/georgiIvanov/dca-investing
project_urls =
    Bug Tracker = https://github.com/georgiIvanov/dca-investing/issues
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
  

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dca-investing = main:main